manifest/nodejs-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-v1
  labels:
    app: nodejs
    version: v1
    tier: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
      version: v1
      tier: app
  template:
    metadata:
      labels:
        app: nodejs
        version: v1
        tier: app
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPULimit: 200m
        sidecar.istio.io/proxyMemoryLimit: 256Mi
    spec:
      containers:
      - args:
        - app.js
        image: registry.us.lmco.com/n3810c/nodejs-app:v6
        name: nodejs
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
