manifest/db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs
    version: v1
    tier: db
  name: db
spec:
  ports:
  - name: tcp
    protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: nodejs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: nodejs
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
      version: v1
      tier: db
  template:
    metadata:
      labels:
        app: nodejs
        version: v1
        tier: db
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPULimit: 200m
        sidecar.istio.io/proxyMemoryLimit: 256Mi
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - env:
        - name: MONGO_DB
          valueFrom:
            configMapKeyRef:
              key: MONGO_DB
              name: db-env
        - name: MONGO_INITDB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mongo-secret
              key: MONGO_PASSWORD

        - name: MONGO_INITDB_ROOT_USERNAME
          valueFrom:
            secretKeyRef:
              name: mongo-secret
              key: MONGO_USERNAME

        - name: MONGO_PORT
          valueFrom:
            configMapKeyRef:
              key: MONGO_PORT
              name: db-env
        image: registry.us.lmco.com/eo-domino/mongo:3.6-20210201-1721
        name: db
        ports:
        - containerPort: 27017
          name: db
        volumeMounts:
        - mountPath: /data/db
          name: dbdata
      restartPolicy: Always
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
