manifest/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs
    version: v1
    service: db
  name: db
spec:
  ports:
  - name: tcp
    protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: nodejs
